# QtCmakeVs2022Hello

./: CMakeLists.txt  CMakePresets.json  CMakePresets.json.bk  installer.nsi  reame
src/: config_manager.cpp  logger.cpp  main.cpp
src/include/: config_manager.h  logger.h
src/ui/: left.ui  leftpanel.cpp  leftpanel.h  mainwindow.cpp  mainwindow.h
